--- a/assets/css/_news.scss
+++ b/assets/css/_news.scss
@@ -58,3 +58,29 @@
 		}
 	}
 }
+
+/* Responsive layout for Mobile devices */
+@media (max-width: 768px) {
+	#news-posts {
+		padding: 2em 0;
+		.container {
+			.news-grid {
+				margin-top: 1em;
+				.post {
+					.image-wrapper {
+						height: 200px;
+					}
+					.content {
+						height: 180px;
+						h6 {
+							font-size: 14px;
+						}
+						p {
+							font-size: 18px;
+						}
+					}
+				}
+			}
+		}
+	}
+}
