--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -871,6 +871,31 @@ footer {
 			}
 		}
 	}
+
+	#common-banner {
+		height: fit-content;
+		width: 100%;
+		.container {
+			height: 100%;
+			flex-direction: column;
+			.content {
+				width: 100%;
+				height: fit-content;
+				padding: 2em 0;
+				h1 {
+					margin-top: 0;
+				}
+			}
+
+			.image-wrapper {
+				width: 100%;
+				height: 250px;
+				img {
+					object-fit: fill;
+				}
+			}
+		}
+	}
 }
 
 /* Style Imports */
